# zsvm

./: .gitignore  AmoebaOptimizer.cpp  AmoebaOptimizer.hpp  CMakeLists.txt  EnumTypes.cpp  EnumTypes.hpp  JacobiCoordinates.cpp  JacobiCoordinates.hpp  PackedLinearAlgebra.cpp  PackedLinearAlgebra.hpp  PackedLinearAlgebraImpl.hpp  Particle.cpp  Particle.hpp  Permutation.cpp  Permutation.hpp  README.md  RealSolver.hpp  RealVariationalSolver.cpp  RealVariationalSolver.hpp  Restrict.hpp  ScriptCommand.cpp  ScriptCommand.hpp  ScriptParser.cpp  ScriptParser.hpp  ScriptToken.cpp  ScriptToken.hpp  ScriptTokenizer.cpp  ScriptTokenizer.hpp  SphericalECGConfiningContext.hpp  SphericalECGContext.cpp  SphericalECGContext.hpp  SphericalECGDispersionContext.hpp  SphericalECGJacobiContext.hpp  SphericalECGJacobiVariationalOptimizer.hpp  SphericalECGOverlapContext.hpp  SphericalECGPairwiseContext.hpp  example_script.zscr  main.cpp  main.cpp.bak
beryllium-basis-81/: basis-00000001.tsv  basis-00000002.tsv  basis-00000003.tsv  basis-00000004.tsv  basis-00000005.tsv  basis-00000006.tsv  basis-00000007.tsv  basis-00000008.tsv  basis-00000009.tsv  basis-00000010.tsv  basis-00000011.tsv  basis-00000012.tsv  basis-00000013.tsv  basis-00000014.tsv  basis-00000015.tsv  basis-00000016.tsv  basis-00000017.tsv  basis-00000018.tsv  basis-00000019.tsv  basis-00000020.tsv  basis-00000021.tsv  basis-00000022.tsv  basis-00000023.tsv  basis-00000024.tsv  basis-00000025.tsv  basis-00000026.tsv  basis-00000027.tsv  basis-00000028.tsv  basis-00000029.tsv  basis-00000030.tsv  basis-00000031.tsv  basis-00000032.tsv  basis-00000033.tsv  basis-00000034.tsv  basis-00000035.tsv  basis-00000036.tsv  basis-00000037.tsv  basis-00000038.tsv  basis-00000039.tsv  basis-00000040.tsv  (+41 more)
scripts/: PackedLinearAlgebra.wl
